Copy native-image as is